Add support for 'u' flag

--- a/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
+++ b/rhino/src/main/resources/org/mozilla/javascript/resources/Messages.properties
@@ -265,6 +265,9 @@ msg.duplicate.group.name =\
 msg.invalid.named.backref =\
     Invalid named capture referenced
 
+msg.invalid.class =\
+    Invalid character class
+
 # NativeDate
 msg.invalid.date =\
     Date is invalid.
